environments/prd/evaluation-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: evaluation-service
  namespace: evaluation-service-prd
spec:
  replicas: 3
  selector:
    matchLabels:
      app: evaluation-service
  template:
    metadata:
      labels:
        app: evaluation-service
    spec:
      imagePullSecrets:
        - name: acr-pull-secret
      containers:
        - name: evaluation-service
          image: toggleacrfase3.azurecr.io/evaluation-service:f2a94e7
          ports:
            - containerPort: 8004
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
