environments/prd/evaluation-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: evaluation-service
  namespace: evaluation-service-prd
spec:
  type: ClusterIP
  selector:
    app: evaluation-service
  ports:
    - port: 8004
      targetPort: 8004
      protocol: TCP
      name: http


#kubectl run -it --rm curl --image=curlimages/curl -n evaluation-service-prd --restart=Never -- curl http://evaluation-service.evaluation-service-prd.svc.cluster.local:8004/health
