environments/prd/evaluation-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: evaluation-service-ingress
  namespace: evaluation-service-prd
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: evaluation.20.41.58.199.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: evaluation-service
                port:
                  number: 8004
